# snip

./: .darglint  .gitignore  .pre-commit-config.yaml  README.md  README_outline.md  citation.cff  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: cache_version  darglint.yml  documentation.yml  pre-commit.yml  pytest.yml  tutorials.yml
data/analysis/: significance_ratio_and_heritability.csv  significance_ratios.csv
data/compressed/whole_geno/chr1_100k_relu_512swept-salad-171_2023-01-16/: metadata.jsonl
data/compressed/whole_geno/chr1_100k_relu_512wild-aardvark-173_2023-01-16/: metadata.jsonl
data/compressed/whole_geno/chr1_200k_relu_512silvery-rain-169_2023-01-16/: metadata.jsonl
data/compressed/whole_geno/chr1_20k_relu_512skilled-flower-175_2023-01-17/: metadata.jsonl
data/compressed/whole_geno/chr1_20k_relu_512usual-totem-174_2023-01-16/: metadata.jsonl
data/compressed/whole_geno/chr1_50k_relu_512devoted-deluge-172_2023-01-16/: metadata.jsonl
data/compressed/whole_geno/chr1_50k_relu_512lunar-frog-169_2023-01-16/: metadata.jsonl
docs/: compression.md  conf.py  faq.rst  index.rst  installation.rst  news.rst  report.md
project/: 001_convert.sh  002_train.sh  002_train_test_split.py  002_train_test_split.sh  003_train.sh  004.1_train_sklearn_mulitple.sh  004.1_train_sklearn_vary_size.py  004_train_sklearn.sh  005_train_pytorch_cpu.sh  006.convert_to_sped.sh  007.1_whole_chrom_split.py  007_train_sklearn_whole-chrom.sh  008.combine.py  008.combine.sh  009.1.fit_single_snp.sh  009.1.fit_single_snp_copy.sh  009.fit_single_snp.sh  010.fit_model_on_uncompressed_data.sh  011.1_pruning.py  011.pruning.sh  012.convert_compression_to_sped.py  012.convert_compression_to_sped.sh  013.fit_model_on_all_compressions.py  013.fit_model_on_all_compressions_alkaline_chr1-22_20k_relu_16_compression_4_c_snps_train.sh  fit_heritability_model_ldak.sh  fit_prediction_model_ldak.sh
project/reports/data-examination/: data-examination.py
project/reports/slurm-output/: 001_convert.sh-kce-4932566.out  001_convert.sh-kce-6269197.out  001_convert.sh-kce-6269199.out  001_convert.sh-kce-6293184.out  001_convert.sh-kce-8591368.out  001_convert.sh-kce-9720622.out  001_convert.sh-kce-9720644.out  002_train.sh-kce-6298999.out  002_train.sh-kce-6648585.out  002_train.sh-kce-6660897.out  002_train.sh-kce-6695092.out  002_train.sh-kce-6705079.out  002_train.sh-kce-6908395.out  002_train.sh-kce-6962483.out  002_train.sh-kce-7202573.out  002_train.sh-kce-7277954.out  002_train.sh-kce-7282489.out  002_train.sh-kce-7285718.out  002_train.sh-kce-7289137.out  002_train.sh-kce-7308469.out  002_train.sh-kce-7343467.out  002_train_test_split.sh-kce-8499264.out  002_train_test_split.sh-kce-9720615.out  002_train_test_split.sh-kce-9727873.out  003.1_train_large_batch.sh-kce-7426363.out  003.2_train_large_stride.sh-kce-7426362.out  003_train.sh-kce-7343851.out  003_train.sh-kce-7425686.out  003_train_sklearn.sh-kce-7290647.out  003_train_sklearn.sh-kce-7293267.out  003_train_sklearn.sh-kce-7310728.out  004.1_train_sklearn.sh-kce-8462423.out  004.1_train_sklearn_mulitple.sh-kce-8572337.out  004.1_train_sklearn_mulitple.sh-kce-8583194.out  004.2_train_sklearn.sh-kce-8462428.out  004.3_train_sklearn.sh-kce-8462429.out  004.4_train_sklearn.sh-kce-8462430.out  004.5_train_sklearn.sh-kce-8482281.out  004.5_train_sklearn.sh-kce-8491189.out  004.5_train_sklearn.sh-kce-8518934.out  (+395 more)
src/: __init__.py
src/examination/: examine_metadata.py
src/name/: about.py
src/snip/: __main__.py  about.py  fit_heritability_model.sh  tmp.py  train_linear_model.py  train_slided_autoencoder.py  train_slided_autoencoder_sklearn.py  utils.py
src/snip/cli/: __init__.py  _util.py  convert.py  create_test_data.py  data.py  setup.py  train_test_split.py
src/snip/configs/: default_config_train_slided_autoencoder copy.yaml  default_config_train_slided_autoencoder.yaml  default_config_train_slided_autoencoder_sklearn.yaml  test_config_train_slided_autoencoder.yaml
src/snip/data/: __init__.py  dataloaders.py  write_sped.py
src/snip/models/: __init__.py  create.py  denoising_autoencoder.py  mlp.py  pl_wrapper.py  pl_wrapppers.py  snpnet.py  utils.py
src/visualizations/: single_snp_visualizations.py
tests/: ignore_tst_dataloaders.py  test_cli.py  test_create.py  test_dataloaders.py  test_mlp.py  test_snpnet.py  test_train_slided_autoencoder.py  test_train_slided_autoencoder_sklearn.py  test_utils.py  utils.py
tests/data/: test.bim  test.fam
tests/data/compressed/None_2023-01-13/: metadata.jsonl
