[tool.poetry]
name = "snip"
version = "0.0.8"
description = "A utility package for analysing SNps wIth Python with the intended use of using in in e.g. PyTorch."
authors = ["Kenneth Enevoldsen <kennethcenevoldsen@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
typer =  {extras = ["all"], version = ">=0.5.0,<0.7.0"}
pandas_plink = ">=2.2.9,<2.3.0"
zarr = ">=2.11.0,<2.12.0"
torch = ">=1.10.2,<1.11.0"
pytest = "^7.1.2"
update = "^0.0.1"

[tool.poetry.dev-dependencies]
pre-commit = ">=2.19.0,<2.19.1"
pytest = ">=7.1.2,<7.1.3"
pytest-cov = ">=3.0.0,<3.0.1"
black = ">=22.3.0,<22.4.0"
ipython = ">=8.4.0,<8.5.0"
ipykernel = ">=6.15.1,<6.16.0"
flake8 = ">=4.0.1,<4.1.0"
Sphinx = "^5.0.2"
furo = "^2022.6.21"
sphinx-copybutton = "^0.5.0"
sphinxext-opengraph = "^0.6.3"
myst-parser = "^0.18.0"
mypy = "^0.961"
types-setuptools = "^62.6.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "**/tests/*",
    "**/_vendorized/*",
    "**/about.py",
]

exclude_lines = [
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __unicode__",
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "poetry build"

[tool.poetry.scripts]
snip = "snip.cli._util:setup_cli"

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true