[metadata]
name = snip 
description = A utility package using SNp I Python with the intended use of using in in e.g. PyTorch.
author = Kenneth Enevoldsen
author_email = kennethcenevoldsen@gmail.com
url = https://github.com/KennethEnevoldsen/snip 
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    template
[options]
packages = find:
include_package_data = true
python_requires = >=3.7
zip_safe = false
install_requires =
    pandas_plink>=2.2.9,<2.3.0

setup_requires =
    setuptools


[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
plugins = pydantic.mypy, thinc.mypy

[coverage:run]

[coverage:report]
omit =
    **/tests/*
    **/tests/*
    **/_vendorized/*
    **/about.py
    **/sentiment/vaderSentiment_da.py
exclude_lines =
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __unicode__
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
show_missing = True

